# simple-wakeonlan-service

./: Cargo.toml  DOCKER.adoc  Justfile  README.adoc  justfile  package.json  tailwind.config.js
docker/: Dockerfile
src/: main.rs
templates/components/: device-ip.html  device-status.html  device.html
templates/layouts/: base.html
templates/pages/: root.html
