[package]
name = "rust-htmx-project"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["macros"] }
macaddr = { version = "1.0.1", features = ["serde_std"] }
ping-rs = "0.1.2"
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wake-on-lan = "0.2.0"
